--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  validators: ^3.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  intl_phone_number_input: ^0.7.2
+  intl_phone_field: ^3.2.0
+  image_picker: ^1.0.1
+  file_picker: ^5.3.1
+  image_cropper: ^4.0.1
 
 dev_dependencies:
   flutter_test:
